
The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

[discrete]
==== Versions
toc::[]

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.3.1...main[Unreleased]

=== Added

=== Changed

=== Removed

=== Fixed

=== Bumped

* Moshi 1.8.0 -> 1.12.0

=== Migration

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.2.1...v1.3.1[1.3.1]

Re release of 1.3.0 due to build issues

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.2.1...v1.3.0[1.3.0]

=== Added

* Add FHIR R4 model MedicationStatement and PractitionerRole

=== Changed

* FhirElementFactory#getClassForFhirType is now case insensitive.

== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.2.0...v1.2.1[1.2.1]

=== Changed

* Canonical(R4): had been aligned with the other classes of the repo

=== Fixed

* CanonicalJsonAdapter#toJson(R4): it accesses `value` of a writer now only once


== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.1.0...v1.2.0[1.2.0]

=== Changed

* BREAKING module name changed from `hc-fhir-sdk-java` to `fhir-java`

=== Migration

You need to update your Gradle dependency declaration from "care.data4life.hc-fhir-sdk-java:hc-fhir-sdk-java:{version}" to:

[source, gradle]
----
dependencies {
    implementation("care.data4life.hc-fhir-sdk-java:fhir-java:$version")
}
----


== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v1.0.0...v1.1.0[1.1.0]

=== Added

* common FHIR version interface to provide version and resource type information for FHIR 3 and 4
* test to verify FHIR 4 implementation

=== Changed

* Migration guide for 1.0.0 to include FHIR model property order change

=== Fixed

* FHIR 4 AttachmentHelper to use FHIR 4 resources instead of FHIR 3 ones


== https://github.com/d4l-data4life/hc-fhir-sdk-java/compare/v0.7.0...v1.0.0[1.0.0]

=== Added

* Add FHIR R4 generated models